Fix unwanted dates wrap on less-than-smart browsers

--- a/web/style.css
+++ b/web/style.css
@@ -123,6 +123,7 @@ tr:nth-child(odd) td {
     text-align: center;
 }
 
+.last_updated,
 .badges {
     white-space: nowrap;
 }
